chore: Update To-Do list formatting for improved clarity and organization